--- a/Assignments/TSA_A1_Sp21.Rmd
+++ b/Assignments/TSA_A1_Sp21.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "ENV 790.30 - Time Series Analysis for Energy Data | Spring 2021"
 subtitle: "Assignment 1 - Due date 01/27/21"
-author: "Student Name"
+author: Yuxin Hu
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -19,17 +19,16 @@ When you have completed the assignment, **Knit** the text and code into a single
 
 Q1. What are your previous experiences with time series analysis, R, and Git? 
 
-> Answer: 
-
+> Answer: I took applied data analytics (ENVIRON 710) in the first semester and learned a little bit about R, like how to draw plots or do linear regressions. Then I took sourcing data for analytics where I learned a little bit about time series data and we used git to submit our assignment.
 
 Q2. Provide a link below to your forked course repository in GitHub. Make sure you have pulled all recent changes from the course repository and that you have updated your course README file as instructed on the recorded video "Getting started with Git and Github". 
 
-> Answer: 
+> Answer: https://github.com/YuxinHu1998/ENV790_30_TSA_S2021.git
 
 
 Q3. For this part we just want to see the path to your R project. No need to do anything. The output will be automatically generated once you knit you file. 
 
-> Answer: This is my working directory:
+> Answer: This is my working directory: "/Users/yuxinhu/Desktop/Time series/ENV790_30_A1/Assignments"
 
 ```{r}
 getwd()
